--- a/source/less/base/variables.less
+++ b/source/less/base/variables.less
@@ -1,1 +1,8 @@
-@color: pink;
+@color-blue: #81B3D3;
+@color-black: #000000;
+@color-white: #ffffff;
+@color-brown: #766357;
+@color-gray:  #EEEEEE;
+@font-family-base: "PT Sans";
+
+
