--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,2 +1,6 @@
 @import "base/variables.less";
+@import "base/layout.less";
 @import "blocks/header.less";
+@import "blocks/site-list.less";
+@import "base/fonts.less";
+
